tests/fail/shims/sync/libc_pthread_mutex_destroy_locked.stderr
error: Undefined Behavior: destroyed a locked mutex
  --> $DIR/libc_pthread_mutex_destroy_locked.rs:LL:CC
   |
LL |         libc::pthread_mutex_destroy(&mut mutex as *mut _);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ destroyed a locked mutex
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE:
   = note: inside `main` at $DIR/libc_pthread_mutex_destroy_locked.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

